--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <audio controls autoplay class="bg-music">
-        <source src="/music/Soda Stereo - 1984/1 Por Qué No Puedo Ser Del Jet Set- (Remasterizado 2007).flac"
+        <source src="music/Soda Stereo - 1984/1 Por Qué No Puedo Ser Del Jet Set- (Remasterizado 2007).flac"
         type="audio/flac">
     
     </audio>
