--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <body>
 
     <audio controls autoplay class="bg-music">
-        <source src="/1 Por Qué No Puedo Ser Del Jet Set- (Remasterizado 2007).flac"
-        type="audio/flac">
+        <source src="Soda Stereo - 1984/1 Por Qué No Puedo Ser Del Jet Set- (Remasterizado 2007).flac">
     
     </audio>
 
